k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: divinum-officium
  namespace: default
  labels:
    app: divinum-officium
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: divinum-officium
